2007-05-17  Vivien Malerba <malerba@gnome-db.org>

	* libgda/gda-object-ref.c: when losing the reference to the referenced object, correctly
	respond to users still wanting to know which was the referenced object
	* libgda/gda-init.c: make the default dictionary handle graph objects
	* providers/sqlite/gda-sqlite-provider.c: correct which statement is executed to force 
	SQLite to re-read the database structure
	* libgda/gda-data-model-query.c: avoid showing a warning about
	modification query's param type if expected type is unknown
	* libgda/gda-query.c: display a warning when expanding a table.* field
	into a list of fields when the dictionary is not up to date

2007-05-14  Vivien Malerba <malerba@gnome-db.org>

	 * configure.in: set to version 3.1.1
	 * libgda/graph/gda-graph-item.c: minor object dump display correction
	 * libgda/graph/gda-graph-query.c: if the dictionary does not handle
	 GdaGraph objects, then make it handle them instead of crashing

2007-05-14  Vivien Malerba <malerba@gnome-db.org>

	Propagated from the "release-3-0-branch" branch
	* libgda/gda-value.c: remove warnings in gda_value_stringify() for invalid dates
	* libgda/gda-client.c: correctly implement connection sharing
	* libgda/gda-client.c: correctly emit the "event_notification" signal when a connection is opened, 
	bug #316698
	* libgda/gda-column.c: memory leak correction
	* providers/sqlite/gda-sqlite-provider.c: force SQLite to re-read the database structure
	in case it has been modified by another connection since the last time an SQL statement
	was executed
	
2007-05-08  Armin Burgmeier  <armin@openismus.com>

	* libgda/sql-delimiter/lexer.l: Add special rule for '\\' so that \\'
	is correctly recognized as string delimiter.

	* libsql/lexer.l: Applied the same change here. Bug #433687.

2007-05-06  Vivien Malerba <malerba@gnome-db.org>

	* providers/sqlite/sqlite-src/Makefile.am: changes due to the new type of distributed source of
	SQLite